--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,152 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+}
+body{
+  background-color: rgb(141, 141, 141);
+  
+}
+.heading{
+  width: 100vw;
+  height: 10vh;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  background-color: blanchedalmond;
+}
+h5{
+  font-size: 2rem;
+  margin-top: 15px;
+}
+#root{
+  width: 100vw;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.cards{
+  margin: 50px;
+  padding-bottom: 10px;
+  border-radius: 10px;
+  background-color: rgb(230, 230, 230);
+}
+.cards img{
+  width: 350px;
+  height: 350px;
+  border-radius: 
+  10px 10px 0px 0px ;
+}
+.card__info{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin: 5px;
+}
+.card__category{
+  color: rgb(105, 105, 105);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+button{
+  margin-top: 5px;
+  padding: 3px;
+  color:  rgb(66, 66, 66);;
+}
+button:hover{
+  cursor: pointer;
+}
+.cards:hover{
+  box-shadow: 0px 10px 10px 0px #3d3d3d;
+  transform: translateY(-10px);
+}
+@media only screen and (max-width:1440px) {
+  .heading{
+    height: 10vh;
+  }
+  h5{
+    margin-top: 20px;
+    font-size: 1.5rem;
+  }
+  .cards{
+    margin: 45px;
+  }
+  .cards img{
+    width: 350px;
+    height: 350px;
+  }
+}
+
+@media only screen and (max-width:768px) {
+  .heading{
+    padding: 5px 0px;
+    height: 9vh;
+  }
+  h5{
+    font-size: 1.5rem;
+  }
+  .cards{
+    margin: 35px;
+  }
+  .cards img{
+    width: 250px;
+    height: 300px;
+  }
+}
+@media only screen and (max-width:426px) {
+  .heading{
+    padding: 8px;
+    height: 8vh;
+    margin-bottom: 30px;
+  }
+  h5{
+    font-size: 1.4rem;
+  }
+  .cards{
+    margin: 0px;
+    margin-bottom: 25px;
+  }
+  .cards img{
+    width: 345px;
+    height: 340px;
+  }
+}
+@media only screen and (max-width:376px) {
+  .heading{
+    height: 8vh;
+    padding: 9px ;
+    margin-bottom: 25px;
+  }
+  h5{
+    font-size: 1.3rem;
+  }
+  .cards{
+    margin: 0px;
+    margin-bottom: 25px;
+  }
+  .cards img{
+    width: 325px;
+    height: 325px;
+  }
+}
+@media only screen and (max-width:320px) {
+  .heading{
+    height: 8vh;
+    padding: 10px 0px;
+    margin: 0px;
+    margin-bottom: 20px;
+  }
+  h5{
+    font-size: 1.2rem;
+  }
+  .cards{
+    margin: 0px;
+    margin-bottom: 20px;
+  }
+  .cards img{
+    width: 300px;
+    height: 300px;
+  }
 }
